# ups-guard

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  GITHUB_RELEASE_v1.0.0.md  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  release.md
agent/: BUILD.md  build_exe.py  pyproject.toml
agent/src/ups_guard_agent/: __init__.py  autostart.py  client.py  commands.py  config.py  gui.py  main.py  system_info.py  tray.py  win_service.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: actions.py  agent_ws.py  agents.py  analytics.py  config.py  devices.py  diagnostic.py  health.py  history.py  hooks.py  predictions.py  preferences.py  quick_actions.py  router.py  status.py  system.py  ups.py  ups_control.py  websocket.py
backend/src/db/: database.py  schema.sql
backend/src/hooks/: __init__.py  agent_shutdown.py  base.py  custom_script.py  http_api.py  mock_hook.py  qnap_shutdown.py  registry.py  ssh_shutdown.py  synology_shutdown.py  (+1 more)
backend/tests/: conftest.py  test_api_integration.py  test_auth_middleware.py  test_config_import.py  test_config_parameters.py  test_crypto.py  test_diagnostics.py  test_grpc_retry.py  test_history.py  test_hook_executor.py  test_monitor.py  test_nut_client.py  test_plugins.py  test_plugins_integration.py  test_shutdown_manager.py  test_ups_param_api.py
backend/tools/: README.md  __init__.py  analyze_battery.py  check_db.py  check_ups.py  quick_status.py  show_latest_report.py  test_background_task.py  test_beeper_api.py  test_nut_parameters.py  test_report_api.py
(+130 files in other folders)
