[project]
name = "ups-guard-backend"
version = "2.0.0"
description = "UPS Guard Backend Service"
authors = [{name = "KingBoyAndGirl"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "aiosmtplib>=3.0.0",
    "cryptography>=46.0.5",
    "asyncssh>=2.14.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
